--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hue_craft
-description: A new Flutter package project.
+description: You can build your own custom color pickers easily with this package
 version: 0.0.1
 homepage: https://github.com/HARUM1122/hue_craft
 
